k8s/aa.yaml
apiVersion: v1
kind: Pod
metadata:
  name: central-pod
spec:
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: my-pvc
  containers:
    - name: central-library
      image: sansansanya/central-library
      ports:
        - containerPort: 8000
          name: "central-library"
    - name: central-db
      image: postgres
      ports:
        - containerPort: 5432
      volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
