k8s/bg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bg-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bg-pod
  template:
    metadata:
      labels:
        app: bg-pod
    spec:
      volumes:
        - name: data-bg-3
          persistentVolumeClaim:
            claimName: my-pvc
      containers:
        - name: bg-db
          image: sansansanya/cloud-db:k8s1.1
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data-bg-3
              mountPath: /var/lib/postgresql/data
        - name: bg-library
          image: sansansanya/local-library:2.2.0
          command:
            [
              "uvicorn",
              "main:app",
              "--reload",
              "--host",
              "0.0.0.0",
              "--port",
              "8011",
            ]
          ports:
            - containerPort: 8011
