k8s/nis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nis-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nis-pod
  template:
    metadata:
      labels:
        app: nis-pod
    spec:
      volumes:
        - name: data-nis
          persistentVolumeClaim:
            claimName: my-pvc
      containers:
        - name: nis-db
          image: sansansanya/cloud-db:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data-nis
              mountPath: /var/lib/postgresql/data
        - name: nis-library
          image: sansansanya/local-library:k8s1.2.6
          command:
            [
              "uvicorn",
              "main:app",
              "--reload",
              "--host",
              "0.0.0.0",
              "--port",
              "8018",
            ]
          ports:
            - containerPort: 8018
