k8s/ns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ns-pod
  template:
    metadata:
      labels:
        app: ns-pod
    spec:
      volumes:
        - name: data-ns
          persistentVolumeClaim:
            claimName: my-pvc
      containers:
        - name: ns-db
          image: sansansanya/cloud-db:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data-ns
              mountPath: /var/lib/postgresql/data
        - name: ns-library
          image: sansansanya/local-library:k8s1.2.6
          command:
            [
              "uvicorn",
              "main:app",
              "--reload",
              "--host",
              "0.0.0.0",
              "--port",
              "8021",
            ]
          ports:
            - containerPort: 8021
