k8s/bg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bg-service
spec:
  selector:
    app: bg-pod
  ports:
    - protocol: TCP
      port: 8011
      targetPort: 8011
