k8s/central-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: central-library
spec:
  selector:
    app: central-pod
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
